# word-reveal-toy-rain

./: .gitignore  accelerometer-debug.html  game.js  index.html  make_assets.py  make_audio.py  make_collision_outputs.py  make_directwrite_assets.py  make_hitbox_sheet.py  next_words.txt  run-game.bat  styles.css  update_manifest_hitboxes.py
assets/: manifest.json
assets/audio/: a.opus  airplane.opus  ambulance.opus  ant.opus  apple.opus  b.opus  backpack.opus  badger.opus  ball.opus  balloon.opus  banana.opus  baseball.opus  basketball.opus  bathtub.opus  beach-ball.opus  bear.opus  beaver.opus  bed.opus  bee.opus  bicycle.opus  bison.opus  blocks.opus  boat.opus  book.opus  boots.opus  bread.opus  broccoli.opus  broom.opus  bucket.opus  bus.opus  butter.opus  butterfly.opus  c.opus  cake.opus  camel.opus  camera.opus  candle.opus  candy.opus  carrot.opus  castle.opus  (+185 more)
assets/sprite-pointvis-10/: airplane.json  ambulance.json  ant.json  apple.json  backpack.json  badger.json  ball.json  balloon.json  banana.json  baseball.json  basketball.json  bathtub.json  beach-ball.json  bear.json  beaver.json  bed.json  bee.json  bicycle.json  bison.json  blocks.json  boat.json  book.json  boots.json  bread.json  broccoli.json  broom.json  bucket.json  bus.json  butter.json  butterfly.json  cake.json  camel.json  camera.json  candle.json  candy.json  carrot.json  castle.json  cat.json  chair.json  cheese.json  (+160 more)
mkl_sdf_8gon/: CMakeLists.txt  README.md
mkl_sdf_8gon/src/: main.cpp  visibility_cuda.cu  visibility_cuda.h
tools/: render_emoji_dw.cpp
